# langgraph-sharepoint-demo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: acr-cleanup.yml  build-and-push.yml
Architecture/: README.md  workspace.dsl
Architecture/ADRs/: 0001-parallel-deploy-targets.md  0002-postgres-private-vnet.md  0003-split-checkpointer-strategy.md  0004-sharepoint-azure-function-default.md  0005-managed-identity-httpx-auth-bridge.md  0006-fabric-mcp-read-only-allowlist.md  0007-fabric-backend-selection-config-driven.md  0008-fabric-mcp-fails-open.md  0009-keyvault-access-policy-mode.md  0010-foundry-ai-services-separate-terraform-root.md
Architecture/DOCs/: 01-context.md  02-container.md
app/: checkpointer.py  graph.py  main.py  responses_adapter.py
app/nodes/: agent1_search.py  agent2_evaluate.py  agent3_finalize.py  agent4_fabric_context.py
app/schemas/: state.py
app/tools/: fabric_auth.py  sharepoint_tool.py
docker/: Dockerfile
foundry/: README.md  agent.yaml
sharepoint-csom-service/: Program.cs  README.md  SharePointSearchFunction.csproj  host.json
sharepoint-csom-service/Functions/: FilesFunction.cs  SearchFunction.cs
sharepoint-csom-service/Models/: DocumentResult.cs  FindFilesRequest.cs  FindFilesResponse.cs  SearchRequest.cs  SearchResponse.cs
terraform/: README.md
tests/: test_agent4_fabric_context.py  test_checkpointer.py  test_fabric_auth.py  test_graph_routing.py  test_llm_builder.py  test_main_fallback.py  test_responses_adapter.py  test_sharepoint_tool.py  test_state_schema.py
(+49 files in other folders)
