[project]
name = "langgraph-sharepoint-demo"
version = "0.1.0"
description = "LangGraph multi-agent SharePoint document audit workflow"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
    "fastapi>=0.115",
]

[project.optional-dependencies]
azure = [
    "langchain-azure-ai[hosting]>=1.2.4",
    "azure-identity>=1.17",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
